--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,18 +24,19 @@
     "start:hmr": "npm run server:dev:hmr"
   },
   "dependencies": {
-    "@angular/common": "2.2.4",
-    "@angular/compiler": "2.2.4",
-    "@angular/core": "2.2.4",
-    "@angular/forms": "^2.2.4",
-    "@angular/http": "2.2.4",
-    "@angular/platform-browser": "2.2.4",
-    "@angular/platform-browser-dynamic": "2.2.4",
-    "@angular/router": "3.2.4",
+    "@angular/common": "^2.4.1",
+    "@angular/compiler": "^2.4.1",
+    "@angular/core": "^2.4.1",
+    "@angular/forms": "^2.4.1",
+    "@angular/http": "^2.4.1",
+    "@angular/platform-browser": "^2.4.1",
+    "@angular/platform-browser-dynamic": "^2.4.1",
+    "@angular/router": "~3.4.1",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/request-idle-callback": "^1.0.7",
     "@angularclass/webpack-toolkit": "^1.3.3",
     "@types/es6-shim": "0.0.28",
+    "@types/reflect-metadata": "0.0.5",
     "angular2-cookie": "^1.2.4",
     "angular2-in-memory-web-api": "0.0.20",
     "angular2-infinite-scroll": "^0.2.1",
