--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,8 +61,8 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "@angularclass/hmr": "^1.0.1",
-    "@angularclass/hmr-loader": "^1.0.1",
+    "@angularclass/hmr": "~1.2.2",
+    "@angularclass/hmr-loader": "~3.0.2",
     "@types/core-js": "^0.9.28",
     "@types/hammerjs": "^2.0.28",
     "@types/jquery": "^2.0.33",
@@ -70,7 +70,7 @@
     "@types/node": "^6.0.38",
     "@types/source-map": "^0.1.26",
     "@types/uglify-js": "^2.0.27",
-    "@types/webpack": "^1.12.29",
+    "@types/webpack": "^2.0.0",
     "@types/d3": "4.4.0",
     "angular2-hmr": "~0.8.0",
     "angular2-template-loader": "^0.5.0",
