--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,10 +51,9 @@
     "moment": "^2.14.1",
     "ng2-bootstrap": "^1.1.16-10",
     "ng2-page-scroll": "^3.2.0",
-    "ng2-translate": "^3.1.3",
     "pickmeup": "3.0.6",
     "rainbowvis.js": "^1.0.1",
-    "reflect-metadata": "^0.1.3",
+    "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
     "tether": "^1.3.7",
@@ -68,9 +67,9 @@
     "@types/jquery": "^2.0.33",
     "@types/lodash": "0.0.28",
     "@types/node": "^6.0.38",
-    "@types/source-map": "^0.1.26",
+    "@types/source-map": "^0.1.27",
     "@types/uglify-js": "^2.0.27",
-    "@types/webpack": "^2.0.0",
+    "@types/webpack": "1.12.29",
     "@types/d3": "4.4.0",
     "angular2-hmr": "~0.8.0",
     "angular2-template-loader": "^0.5.0",
