--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "moment": "^2.14.1",
     "ng2-bootstrap": "^1.1.16-10",
     "ng2-page-scroll": "^3.2.0",
+    "ng2-translate": "^3.1.3",
     "pickmeup": "3.0.6",
     "rainbowvis.js": "^1.0.1",
     "reflect-metadata": "0.1.3",
